- compat items are no longer added to loot drops automatically
- added auto compat config blacklist for both items and mods, this should be useful for some mods that work mostly on item nbt and aren't suitable for compat


Minor notes:

- reworked stat allocation + stat overview guis into 1 gui
- made stations much cheaper to craft! 
- added stat that converts phys atk dmg to elemental, used by ele mobs currently
- reworked loot multipliers of different types to stack instead of multiply each other.
- should fix crossbows not doing extra dmg
- added gear slot datapacks. Super tiny, just declares drop chances. 
So if there's 100 different sword types, and 5 axe types, they'll still have same chance to drop if their gear slots have same weight.
- renamed all my packages to my new mod name
- mob affixes now aren't separated into prefixes and suffixes
- fix jewel crash bug
- lvl 1 common mobs should now have similar health as vanilla minecraft.
- mobs will have less hp on average
- reworked modify station gui to be instant modify with a button click
- fix nature balm
- level ups now show on screen title messages.
- fixed some texture errors
- added mana burn stat, arcane mobs all have it
- added mana burn resistance
- fix attack speed
- Jar in Jared some deps in my library
- fix typo in mod name of config
- lowered slow scaling of stats (they shouldnt double at max lvl now)
- fix player losing inventory if they die by my status effects (apparently a nullpointer in getdeathmessage cancels the whole bunch of methods)
- added a stat that makes mobs drop more loot if they have it, so now things like mob affixes also give that stat, for convenient balancing
- reworked stat commands to allow level scaling stats too and stat ranges (which are only used for weapon dmg tho)
- added command that lists all extra stats youre given with commands