@@ -2,9 +2,9 @@ package com.robertx22.age_of_exile.config.forge.parts;
 
 public class DropRatesContainer {
 
-    public double GEAR_DROPRATE = 8;
+    public double GEAR_DROPRATE = 7;
     public double SKILL_GEM_DROPRATE = 2;
-    public double JEWEL_DROPRATE = 1;
-    public double CURRENCY_DROPRATE = 1;
+    public double JEWEL_DROPRATE = 0.75D;
+    public double CURRENCY_DROPRATE = 0.75D;
 
 }
