@@ -1,5 +1,6 @@
 package com.robertx22.age_of_exile.mobs.spiders;
 
+import com.robertx22.age_of_exile.mobs.OnTickRandomSpeedBoost;
 import com.robertx22.age_of_exile.vanilla_mc.packets.EntityPacket;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.SpawnReason;
@@ -13,6 +14,12 @@ public class BaseSpider extends SpiderEntity {
 
     public BaseSpider(EntityType<? extends SpiderEntity> entityType, World world) {
         super(entityType, world);
+    }
+
+    @Override
+    public void tick() {
+        OnTickRandomSpeedBoost.onTick(this, 60, 50);
+        super.tick();
     }
 
     @Override
