@@ -1,5 +1,6 @@
 package com.robertx22.age_of_exile.mobs.zombies;
 
+import com.robertx22.age_of_exile.mobs.OnTickRandomSpeedBoost;
 import com.robertx22.age_of_exile.vanilla_mc.packets.EntityPacket;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.SpawnReason;
@@ -14,6 +15,12 @@ public class BaseZombie extends ZombieEntity {
 
     public BaseZombie(EntityType<? extends ZombieEntity> entityType, World world) {
         super(entityType, world);
+    }
+
+    @Override
+    public void tick() {
+        OnTickRandomSpeedBoost.onTick(this, 60, 50);
+        super.tick();
     }
 
     @Override
